--- a/visit.html
+++ b/visit.html
@@ -104,10 +104,10 @@
 												<p>We are located in the heart of northern Virginia, easily accessible by many highways. Our nursery, greenhouses, meadow, and walking paths are open to the public, and we welcome your visit! Parking is a breeze in our spacious lot.</p>
 												<p>You can find us at:</p>
 												<address>
-													<p>3233 Duke St <br>
-														Alexandria, VA 22314</p>
+													<p>8627 Plant Ave <br>
+														Brentsville, VA 20178</p>
 												</address>
-												<!-- <iframe></iframe>	Google Map here -->
+												<div class="iframe-div"><iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDzYWQq_ZqhNc8Vr16uullCT-3jJmlIb5Y&zoom=17&center=38.7127%2C-77.4600"></iframe></div>
 											</section>
 										</div>
 
